[package]
name = "latex_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
thiserror = "1.0.30"

[dependencies.from_tuple]
git = "https://github.com/JohnScience/from_tuple-1.git"
branch = "add-order-dependent-derive"
default_features = false
features = ["order_dependent"]